--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  padding:1.5em;
+  background: #f5f5f5
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+hr {
+  background-color: #fff;
+  padding: 0;
+  margin: 70px;
+}
+
+hr.hr-2 {
+  border: 0;
+  border-bottom: 2px dashed #eee;
+  background: #b1aeab;
+}
+
+
+table {
+  border: 1px #a39485 solid;
+  font-size: .9em;
+  box-shadow: 0 2px 5px rgba(0,0,0,.25);
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+th {
+  text-align: left;
+}
+  
+thead {
+  font-weight: bold;
+  color: #fff;
+  background: #c9c8c7;
+}
+  
+ td, th {
+  text-align: center;
+  padding: 1em .5em;
+  vertical-align: middle;
+}
+  
+ td {
+  border-bottom: 1px solid rgba(0,0,0,.1);
+  background: #fff;
+}
+
+a {
+  color: #b1aeab;
+}
+  
+ @media all and (max-width: 768px) {
+    
+  table, thead, tbody, th, td, tr {
+    display: block;
   }
-}
+  
+  th {
+    text-align: right;
+  }
+  
+  table {
+    position: relative; 
+    padding-bottom: 0;
+    border: none;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+  }
+  
+  thead {
+    float: left;
+    white-space: nowrap;
+  }
+  
+  tbody {
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    white-space: nowrap;
+  }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+  
+  tr {
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  th {
+    border-bottom: 1px solid #b1aeab;
+  }
+  
+  td {
+    border-bottom: 1px solid #b1aeab;
+  }
+ }
+ .top-btn {
+  font-size: 8px;
+  padding: 4px 12px;
+  background-color: #b1aeab;
+  position: relative;
+  border: 0;
+  padding: 8px 8px;
+  display: inline-block;
+  text-align: center;
   color: white;
+  margin-top : 20px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .bottom-btn {
+    font-size: 20px;
+    padding: 4px 12px;
+    background-color: #b1aeab;
+    position: relative;
+    border: 0;
+    padding: 15px 25px;
+    display: inline-block;
+    text-align: center;
+    color: white;
+    margin-top : 20px;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
